--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "git@github.com:oJshua/servitude-connect.git"
+    "url": "git://github.com/oJshua/servitude-connect.git"
   },
   "main": "lib/index.js",
   "keywords": ["javascript", "css", "connect", "middleware", "sugar"],
